Apply IntelliJ inspection cleanup across Companion